@@ -34,8 +34,10 @@ netcfg (0.64) UNRELEASED; urgency=low
     - Add dhcp3-client support.
     - Remove a lot of calls to /sbin/this and /sbin/that in response to Joey's
       rant on debian-boot.
+  * Bastian Blank
+    - Remove sleep.
 
- -- Joshua Kwan <joshk@triplehelix.org>  Sat,  8 May 2004 18:17:05 -0700
+ -- Bastian Blank <waldi@debian.org>  Sun, 16 May 2004 18:08:12 +0200
 
 netcfg (0.63) unstable; urgency=low
 
